--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -9,7 +8,28 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
-###> phpunit/phpunit ###
-/phpunit.xml
+### Code coverage ###
+build
+
+###> PHPCS ###
+.phpcs-cache
+
+### PHP Lint ###
+.phplint-cache
+
+### PHP Unit ###
 .phpunit.result.cache
+
+###> phpunit/phpunit ###
+.phpunit.result.cache
+.phpunit.cache/
 ###< phpunit/phpunit ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
+
+###> overtrue/phplint ###
+/.phplint.cache
+###< overtrue/phplint ###
