--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ build
 ###> overtrue/phplint ###
 /.phplint.cache
 ###< overtrue/phplint ###
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
