--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/property-access": "7.1.1",
         "symfony/runtime": "7.1.1",
         "symfony/serializer": "7.1.2",
-        "symfony/validator": "7.1.2",
+        "symfony/validator": "7.1.*",
         "symfony/yaml": "7.1.1"
     },
     "require-dev": {
