--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@
 APP_ENV=dev
 APP_SECRET=d653a4bb24bda665b350c1d66e6f2e09
 ###< symfony/framework-bundle ###
+
+CDP_API_KEY=some-api-key
+CDP_URL=https://run.mocky.io/v3/beafa96f-c2d9-4900-8ff4-bb6451719a74
